# marching_cubes

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  setup.py
.github/workflows/: test.yml
cmake/modules/: FindNUMPY.cmake
conda-recipe/: 0001-ssize_t-in-parallel-fors-for-windows.patch  bld.bat  build.sh  conda_build_config.yaml  meta.yaml
src/: laplacian_smoothing.cpp  laplacian_smoothing.h  marching_cubes.cpp  marching_cubes.h  python_wrapper.cpp
test/: conftest.py  laplacian_smooth.py  sample_mesh_smoothed4.npz  test_marching_correctness.py  test_marching_regression.py  test_run.py  test_simple_import.py
test/data/reference/: sample_mesh.npz  sample_mesh_smoothed4.npz
